fixed the deployment issue

--- a/.tekton/pipeline.yaml
+++ b/.tekton/pipeline.yaml
@@ -4,7 +4,7 @@ metadata:
   name: gin-api-pipeline
 spec:
   params:
-    - name: repo-url
+    - name: url
       type: string
     - name: revision
       type: string
@@ -19,7 +19,7 @@ spec:
         name: git-clone
       params:
         - name: url
-          value: $(params.repo-url)
+          value: $(params.url)
         - name: revision
           value: $(params.revision)
       workspaces:
